syntax = "proto3";

package scheduler_proto;

service Scheduler {
  /// Install a new trigger onto the scheduler
  rpc InstallTrigger (InstallTriggerRequest)  returns (InstallTriggerResponse);
  /// Update an existing trigger
  rpc UpdateTrigger (UpdateTriggerRequest)  returns (UpdateTriggerResponse);
  /// Manually run a trigger
  rpc ExecuteTrigger (ExecuteTriggerRequest)  returns (ExecuteTriggerResponse);
  /// Get a trigger by id
  rpc GetTrigger (GetTriggerRequest)  returns (GetTriggerResponse);
  /// Retrieve a trigger by token
  rpc FindTriggers (FindTriggersRequest)  returns (FindTriggersResponse);
}

// == INSTALL TRIGGER ==
message InstallTriggerRequest {
}

message InstallTriggerResponse {
}

// == UPDATE TRIGGER ==
message UpdateTriggerRequest {
}

message UpdateTriggerResponse {
}

// == EXECUTE TRIGGER MANUALLY ==
message ExecuteTriggerRequest {
}

message ExecuteTriggerResponse {
}

// == GET TRIGGER ==
message GetTriggerRequest {
}

message GetTriggerResponse {
}

// == Find TRIGGERS ==
message FindTriggersRequest {
}
message FindTriggersResponse {
}
